k8s/infrastructure/network/cilium/base/CiliumClusterwideNetworkPolicy.default-deny.yaml
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: default-deny
  annotations:
    argocd.argoproj.io/sync-wave: "1"
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  endpointSelector: {matchExpressions: [{key: k8s:io.kubernetes.pod.namespace, operator: NotIn, values: [kube-system, cilium-spire, cilium-secrets, envoy-gateway-system]}]}
  ingressDeny: [{}]
  egressDeny: [{}]
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-dns-egress
  annotations:
    argocd.argoproj.io/sync-wave: "1"
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  endpointSelector: {matchExpressions: [{key: k8s:io.kubernetes.pod.namespace, operator: NotIn, values: [kube-system, cilium-spire, cilium-secrets, envoy-gateway-system]}]}
  egress:
    - toEndpoints: [matchLabels: {k8s:io.kubernetes.pod.namespace: kube-system, k8s-app: kube-dns}]
      toPorts: [{ports: [{port: '53', protocol: TCP}, {port: '53', protocol: UDP}], rules: {dns: [{matchPattern: '*'}]}}]
